<resources>
    <string name="app_name">Digital Bank</string>

    <!-- Generics -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_generic">An error occurred! Please try again later.</string>

    <!-- Bottom Sheet -->
    <string name="txt_bottom_sheet_ok">Ok</string>
    <string name="txt_bottom_sheet_warning">Warning</string>

    <!-- Authentication fragments layout -->
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="create_account">Create account</string>
    <string name="recover_account">Recover account</string>
    <string name="button_login">Login</string>
    <string name="register_account">Register account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="telephone">Telephone</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">E-mail</string>
    <string name="send_email">Send e-mail</string>
    <string name="search_hint">Search</string>

    <!-- Register & Login Fragment -->
    <string name="register_provide_name">Please enter your name.</string>
    <string name="register_provide_email">Please provide a valid email address.</string>
    <string name="register_provide_password">Please enter a valid password.</string>
    <string name="register_provide_phone">Please enter the phone number.</string>
    <string name="register_confirm_password_wrong">Passwords do not match.</string>
    <string name="register_confirm_password_empty">Please confirm your password.</string>
    <string name="register_phone_number_invalid">Please enter a valid phone number.</string>

    <!-- Recover Fragment -->
    <string name="recover_please_provide_your_email">Please provide your email to receive a password recovery e-mail.</string>
    <string name="recover_email_sent">E-mail sent.</string>

    <!-- Home Fragment -->
    <string name="text_account_balance_format">R$ %1$s</string>
    <string name="card_transfer">Transfer</string>
    <string name="card_profile">Profile</string>
    <string name="card_deposit">Deposit</string>
    <string name="card_mobile_recharge">Mobile Recharge</string>
    <string name="card_statement">Statement</string>
    <string name="title_account_balance">Account balance</string>
    <string name="last_10_activities">Last 10 transactions</string>
    <string name="see_all">See all</string>
    <string name="title_dialog_confirm_logout">Do you want to sign out of your account?</string>
    <string name="text_message_logout">Please confirm if you want to sign out.</string>

    <!-- Profile Fragment -->
    <string name="title_dialog_confirm_changes">Do you want to change your profile information?</string>
    <string name="text_message_changes">Please confirm if you want to change your profile information.</string>
    <string name="text_message_camera_permission_denied">We need this permission for capturing images through the camera. Please access the permission settings and enable it.</string>
    <string name="text_message_gallery_permission_denied">We need this permission to get images from your gallery. Please access the permission settings and enable it.</string>
    <string name="text_select_options_input_image">Choose one of the options below to add a profile picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!-- Firebase Authentication Errors -->
    <string name="auth_account_not_registered">Account not registered.</string>
    <string name="auth_invalid_email">The e-mail address is incorrectly formatted.</string>
    <string name="auth_invalid_password">The given password is invalid. Try again.</string>
    <string name="auth_email_already_registered">This e-mail is already registered.</string>
    <string name="auth_require_stronger_password">Please provide a stronger password.</string>

    <!-- Deposit Fragments-->
    <string name="deposit_value">Deposit value:</string>
    <string name="confirm">Confirm</string>
    <string name="deposit_success">Deposit successfully\ncompleted!</string>
    <string name="deposit_available_3_buss_days">Your deposit will be available within 3 business days.</string>
    <string name="transaction_code">Transaction code</string>
    <string name="deposit_date">Deposit date:</string>
    <string name="receipt">Receipt</string>
    <string name="statement">Statement</string>
    <string name="update_info">Update info</string>
    <string name="enter_the_value_to_be_deposited">Enter the value to be deposited</string>

    <!-- Mobile Recharge Fragments-->
    <string name="recharge_value">Recharge value:</string>
    <string name="recharge_success">Recharge successfully\ncompleted!</string>
    <string name="credit_available_few_minutes">Your credit will be available in a few minutes.</string>
    <string name="enter_the_value_to_be_recharged">Enter mobile recharge amount</string>
    <string name="recharge_date">Recharge date:</string>
    <string name="phone_number">Phone number:</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="register_provide_recharge_value">Please enter a value greater or equal to R$ 5,00.</string>

    <!-- Transfer Fragments-->
    <string name="transfer_user_list_title_toolbar">Users</string>
    <string name="profile_picture">Profile picture</string>
    <string name="r_0_00">R$ 0,00</string>
    <string name="enter_the_value_to_be_transferred">Enter the value to be transferred</string>
    <string name="transfer_value">Transfer value:</string>
    <string name="confirm_transfer">Confirm the transfer details.</string>
    <string name="after_completed">After completing the transfer,\nit will not be possible to undo it.</string>
    <string name="transfer_to">Transfer to:</string>
    <string name="transfer_completed">Transfer completed\nsuccessfully!</string>
    <string name="debit_successfully_processed">Debit successfully processed, the credit forecast\nin the destination account is up to 30 minutes.</string>
    <string name="insufficient_balance_to_make_transfer">Insufficient balance to make transfer.</string>
    <string name="received_transfer">Received the transfer:</string>
    <string name="transfer_confirmation">Confirm Transfer</string>
    <string name="redefine_amount">Redefine Amount</string>
    <string name="transfer_made_by">Transfer made by:</string>
    <string name="no_transactions_made">You haven\'t made any transactions yet.</string>
    <string name="no_users_available">No users found.</string>

</resources>