<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/color_default"
        android:text="@string/profile_picture" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/default_margin"
        android:background="?actionBarDivider" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_select_options_input_image"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open_camera"
        app:backgroundTint="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_elements_16dp"
        android:textAllCaps="true"
        android:background="@drawable/background_button"
        android:text="@string/camera" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open_gallery"
        app:backgroundTint="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_elements_16dp"
        android:textAllCaps="true"
        android:background="@drawable/background_button"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:text="@string/gallery" />
</LinearLayout>