<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.auth.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:title="Recover account">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_arrow_back">

                <TextView
                    style="@style/style_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_account" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?actionBarDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_login_itens_24dp"
            android:layout_marginTop="@dimen/margin_between_elements_16dp"
            android:hint="@string/hint_name"
            android:textColorHint="@color/color_default"
            app:expandedHintEnabled="true"
            app:startIconContentDescription="Name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtText_register_name"
                style="@style/style_text_input_edit"
                android:drawableStart="@drawable/ic_person"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_login_itens_24dp"
            android:layout_marginTop="@dimen/margin_between_elements_16dp"
            android:hint="@string/hint_email"
            android:textColorHint="@color/color_default"
            app:expandedHintEnabled="true"
            app:startIconContentDescription="E-mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtText_register_email"
                style="@style/style_text_input_edit"
                android:drawableStart="@drawable/ic_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_login_itens_24dp"
            android:layout_marginTop="@dimen/margin_between_elements_16dp"
            android:hint="@string/telephone"
            android:textColorHint="@color/color_default"
            app:expandedHintEnabled="true"
            app:startIconContentDescription="Telephone">

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/edtText_register_telephone"
                style="@style/style_text_input_edit"
                android:drawableStart="@drawable/ic_phone"
                android:inputType="number"
                app:mask="(##) #####-####" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_login_itens_24dp"
            android:layout_marginTop="@dimen/margin_between_elements_16dp"
            android:hint="@string/password"
            android:textColorHint="@color/color_default"
            app:expandedHintEnabled="true"
            app:startIconContentDescription="Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtText_register_password"
                style="@style/style_text_input_edit"
                android:drawableStart="@drawable/ic_lock"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_login_itens_24dp"
            android:layout_marginTop="@dimen/margin_between_elements_16dp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/color_default"
            app:expandedHintEnabled="true"
            app:startIconContentDescription="Confirm password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtText_register_conf_password"
                style="@style/style_text_input_edit"
                android:drawableStart="@drawable/ic_lock"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_account"
            style="@style/style_material_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_login_itens_24dp"
            android:layout_marginTop="@dimen/margin_between_elements_16dp"
            android:text="@string/create_account"
            app:backgroundTint="@null"
            app:layout_constraintTop_toBottomOf="@+id/editText_email_layout" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/style_progress_bar"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>