<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.features.deposit.DepositReceiptFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/style_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receipt"
                    android:textColor="@color/color_default" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?actionBarDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />

        <TextView
            android:id="@+id/txt_deposit_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_login_itens_24dp"
            android:text="@string/deposit_success"
            android:textAlignment="center"
            android:textColor="@color/darker_green"
            android:textSize="@dimen/bigger_text_size_26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/txt_receit_in_three_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/deposit_available_3_buss_days"
            android:textColor="@color/black"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_deposit_success" />

        <TextView
            android:id="@+id/txt_transaction_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/transaction_code"
            android:textColor="@color/black"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_receit_in_three_days" />

        <TextView
            android:id="@+id/txt_show_transaction_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_transaction_code"
            tools:text="-MEJSKHFKJDH" />

        <ImageView
            android:id="@+id/divider_middle"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="@dimen/bigger_margin"
            android:background="?actionBarDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_show_transaction_code" />

        <TextView
            android:id="@+id/txt_deposit_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements_16dp"
            android:text="@string/deposit_date"
            android:textColor="@color/black"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_middle" />

        <TextView
            android:id="@+id/txt_show_deposit_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements_16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_middle"
            tools:text="12/05/24" />

        <TextView
            android:id="@+id/txt_deposit_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_between_elements_16dp"
            android:layout_marginVertical="@dimen/default_margin"
            android:text="@string/deposit_value"
            android:textColor="@color/black"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_deposit_date" />


        <TextView
            android:id="@+id/txt_show_deposit_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_between_elements_16dp"
            android:layout_marginVertical="@dimen/default_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_show_deposit_date"
            tools:text="R$ 100" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            style="@style/style_material_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_login_itens_24dp"
            android:text="@string/txt_bottom_sheet_ok"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_deposit_value" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>