<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.features.recharge.RechargeReceiptFragment">


<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/style_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receipt"
                    android:textColor="@color/color_default" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?actionBarDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />

    <TextView
        android:id="@+id/txt_recharge_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_login_itens_24dp"
        android:layout_marginTop="20dp"
        android:text="@string/recharge_success"
        android:textAlignment="center"
        android:textColor="@color/darker_green"
        android:textSize="@dimen/bigger_text_size_26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
            android:id="@+id/txt_receit_in_few_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/credit_available_few_minutes"
            android:textColor="@color/black"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_recharge_success" />

        <TextView
            android:id="@+id/txt_transaction_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/transaction_code"
            android:textColor="@color/black"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_receit_in_few_minutes" />

        <TextView
            android:id="@+id/txt_show_transaction_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_transaction_code"
            tools:text="-MEJSKHFKJDH" />

        <ImageView
            android:id="@+id/divider_middle"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="@dimen/bigger_margin"
            android:background="?actionBarDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_show_transaction_code" />

        <TextView
            android:id="@+id/txt_recharge_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements_16dp"
            android:text="@string/recharge_date"
            android:textColor="@color/black"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_middle" />

        <TextView
            android:id="@+id/txt_show_recharge_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements_16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_middle"
            tools:text="12/05/24" />


    <TextView
        android:id="@+id/txt_recharge_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_between_elements_16dp"
        android:layout_marginVertical="@dimen/default_margin"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/recharge_value"
        android:textColor="@color/black"
        android:textSize="@dimen/smaller_text_size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_recharge_date" />

    <TextView
            android:id="@+id/txt_show_recharge_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_between_elements_16dp"
            android:layout_marginVertical="@dimen/default_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/smaller_text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_show_recharge_date"
            tools:text="R$ 100" />

    <TextView
        android:id="@+id/txt_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_between_elements_16dp"
        android:layout_marginVertical="@dimen/default_margin"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="@dimen/smaller_text_size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_recharge_value" />


    <com.vicmikhailau.maskededittext.MaskedEditText
        android:id="@+id/txt_show_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_between_elements_16dp"
        android:layout_marginVertical="@dimen/default_margin"
        app:mask="(##) #####-####"
        android:enabled="false"
        android:textColor="@color/black"
        android:textSize="@dimen/smaller_text_size_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_show_recharge_value"
        tools:text="92 99999-9999" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            style="@style/style_material_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_login_itens_24dp"
            android:text="@string/txt_bottom_sheet_ok"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone_number" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>